Bug 980207 - When the refresh driver is under test control, make compositor thread only update when a composite is scheduled; r=dzbarsky

In order to make test behavior better match real-world sampling behavior, this
patch updates the test code in CompositorParent so that it only updates the
layer when a composite is scheduled. This enables creating mochitests that
reproduce bugs observed in regular usage.